tests/neg-macros/i18113b/Test_2.scala
package x

object Main {

  val ref = IntRef(0)

  X.test(ref) // error

}
